--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "reactour": "^1.18.7",
     "styled-components": "^5.3.3",
     "three": "^0.139.2",
     "typy": "^3.3.0",
