--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.0",
     "reactour": "^1.18.7",
     "styled-components": "^5.3.3",
+    "tabs": "^0.2.0",
     "three": "^0.139.2",
     "typy": "^3.3.0",
     "web-vitals": "^2.1.4"
