--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-hook-form": "^7.40.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.1",
     "reactour": "^1.18.7",
     "styled-components": "^5.3.3",
     "tabs": "^0.2.0",
