--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "local": "env-cmd -f .env.local react-scripts start",
     "staging": "env-cmd -f .env.staging react-scripts start",
     "build:staging": "env-cmd -f .env.staging react-scripts build"
