--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "md5": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.5",
     "react-hook-form": "^7.40.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.2.2",
